--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   equatable: ^2.0.5
   bloc: ^8.1.0
   dio: ^4.0.6
+  connectivity_plus: ^2.3.7
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
